# nvbio

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _b_g_z_f_8cpp.html  _b_g_z_f_8cpp_source.html  _b_g_z_f_8h.html  _b_g_z_f_8h_source.html  _bam_aux_8h.html  _bam_aux_8h_source.html  _bam_reader_8cpp.html  _bam_reader_8cpp_source.html  _bam_reader_8h.html  _bam_reader_8h_source.html  _bam_writer_8cpp.html  _bam_writer_8cpp_source.html  _bam_writer_8h.html  _bam_writer_8h_source.html  _e_1_2git_2nvbio_2contrib_2htslib_2htslib_2hts_8h-example.html  _priority_deques_page.html  adler32_8c.html  adler32_8c_source.html  algorithms_8h.html  algorithms_8h_source.html  algorithms_page.html  align.cu  align.h  aligner_8h.html  aligner_8h_source.html  aligner__all_8h.html  aligner__all_8h_source.html  aligner__best__approx_8h.html  aligner__best__approx_8h_source.html  aligner__best__approx__paired_8h.html  aligner__best__approx__paired_8h_source.html  aligner__best__exact_8h.html  aligner__best__exact_8h_source.html  aligner__inst_8h.html  aligner__inst_8h_source.html  (+4492 more)
cmake-local/: gcc.cmake
contrib/bamtools/: BGZF.cpp  CMakeLists.txt
contrib/crc/: CMakeLists.txt
contrib/cub/: cub.h  util_arch.cuh
contrib/cub/block/: block_raking_layout.cuh  block_reduce.cuh  block_scan.cuh
contrib/cub/device/: device_partition.cuh  device_radix_sort.cuh  device_scan.cuh  device_select.cuh
contrib/cub/grid/: grid_queue.cuh
contrib/cub/thread/: thread_store.cuh
contrib/cub/warp/: warp_reduce.cuh  warp_scan.cuh
contrib/htslib/: CMakeLists.txt  bgzf.c  faidx.c  synced_bcf_reader.c  vcf.c
contrib/htslib/cram/: cram_encode.c  cram_index.c  cram_io.c  sam_header.c  vlen.c
contrib/htslib/htslib/: hts.h
contrib/moderngpu/: CMakeLists.txt
contrib/moderngpu/include/: mgpuhost.cuh
contrib/moderngpu/src/: mmio.cpp  (+2 more)
contrib/zlib-1.2.7/: CMakeLists.txt
doxy/: Doxyfile.in
examples/fmmap/: CMakeLists.txt  alignment.h  fmmap.cu  util.h
examples/hello_world2/: hello_world2.cu
examples/mem/: CMakeLists.txt  mem.cu
examples/proteinsw/: CMakeLists.txt  proteinsw.cu  proteinsw_qp.cu
examples/qmap/: CMakeLists.txt  alignment.h  qmap.cu  util.h
examples/seeding/: CMakeLists.txt  seeding.cu
examples/waveletfm/: CMakeLists.txt  waveletfm.cu
nvBWT/: CMakeLists.txt  fake_vector.h  fake_vector_inl.h  filelist.cpp  nvBWT.cpp  nvBWT.cu  nvBWT.dox
nvBowtie/: CMakeLists.txt  nvBowtie.cpp  nvBowtie.dox
nvExtractReads/: CMakeLists.txt  nvExtractReads.cu
nvFM-server/: nvFM-server.cpp  nvFM-server.dox
nvLighter/: CMakeLists.txt  bloom_filters.h  error_correct.cu  error_correct.h  input_thread.h  nvLighter.cu  nvLighter.dox  output_thread.cu  output_thread.h  sample_kmers.cu  sample_kmers.h  utils.h
nvMicroAssembly/: CMakeLists.txt  bam_io.h  kmers_inl.h
nvSSA/: nvSSA.cpp  nvSSA.dox
nvSetBWT/: CMakeLists.txt  nvSetBWT.cu  nvSetBWT.dox
nvbio/: CMakeLists.txt  basic.dox  io.dox  mainpage.dox  nvbio.dox
nvbio-aln-diff/: nvbio-aln-diff.cpp  pe_analyzer.cpp  pe_analyzer.h
nvbio-test/: CMakeLists.txt  alignment_test.cu  alignment_test_utils.h  bloom_filter_test.cu  bwt_test.cpp  condtion_test.cu  fmindex_test.cu  nvbio-test.cpp  packedstream_test.cpp  qgram_test.cu  qgroup_test.cu  rank_test.cu  sequence_test.cu  string_set_test.cu  syncblocks_test.cu  utils.h  wavelet_test.cu  work_queue_test.cu
nvbio/alignment/: alignment.h  alignment_base.h  alignment_inl.h  banded_inl.h  batched.h  batched_banded_inl.h  batched_inl.h  batched_stream.h  sink.h  sink_inl.h  utils.h  utils_inl.h
nvbio/basic/: CMakeLists.txt  algorithms.h  atomics.cpp  atomics.h  bloom_filter.h  bloom_filter_inl.h  console.cpp  console.h  deinterleaved_iterator.h  dna.h  exceptions.h  html.cpp  iterator.h  numbers.h  omp.h  options.h  packed_vector.h  packed_vector_inl.h  packedstream.h  packedstream_inl.h  packedstream_loader.h  packedstream_loader_inl.h  pipeline.h  pipeline_inl.h  popcount.h  popcount_inl.h  primitives.h  primitives_inl.h  priority_deque.h  priority_queue.h  priority_queue_inline.h  shared_pointer.h  strided_iterator.h  string_set_inl.h  sum_tree_inl.h  threads.cpp  threads.h  thrust_view.h  timer.h  transform_iterator.h  (+8 more)
nvbio/fasta/: fasta.h  fasta_inl.h
nvbio/fastq/: fastq_inl.h
nvbio/fmindex/: CMakeLists.txt  backtrack.h  bidir_inl.h  dna.h  filter.h  filter_inl.h  fmindex.h  fmindex_inl.h  mem.h  mem_inl.h  rank_dictionary.h  rank_dictionary_inl.h
nvbio/io/: CMakeLists.txt  alignments.h  alignments_inl.h  fmi.cu  fmi.h  output_file.cpp  output_file.h  output_stream.cpp  output_stream.h  utils.h  vcf.cpp  vcf.h
nvbio/qgram/: filter.h  filter_inl.h  qgram.h  qgram_inl.h  qgroup.h  qgroup_inl.h
nvbio/qgroup/: qgroup.h  qgroup_inl.h
nvbio/strings/: alphabet.h  alphabet_inl.h  infix.h  prefetcher.h  prefix.h  seeds.h  seeds_inl.h  string.h  string_iterator.h  string_set.h  string_set_inl.h  string_set_transform.h  string_traits.h  suffix.h  vectorized_string.h  wavelet_tree.h  wavelet_tree_inl.h
nvbio/sufsort/: blockwise_sufsort.h  bwte.h  bwte_inl.h  compression_sort.h  dc3_sufsort.h  dcs.h  dcs_inl.h  file_bwt.cu  file_bwt.h  file_bwt_bgz.cu  file_bwt_bgz.h  file_bwt_lz4.cu  file_bwt_lz4.h  prefix_doubling_sufsort.h  sufsort.h  sufsort_bucketing.h  sufsort_inl.h  sufsort_priv.cu  sufsort_priv.h  sufsort_test.cu  sufsort_utils.h
nvbio/trie/: suffix_trie.h  suffix_trie_inl.h
nvmem/: align.cu  nvmem.cu  util.cu
prototypes/bamsort/: bam_sort.cu
prototypes/psa/: makefile
search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7a.js  all_7e.js  classes_5f.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_67.js  classes_68.js  classes_69.js  classes_6b.js  classes_6c.js  (+241 more)
sufsort-test/: CMakeLists.txt  sufsort_test.cu
sw-benchmark/: CMakeLists.txt  sw-benchmark.cu
(+163 files in other folders)
